Fixed CSS issue on some themes
git-svn-id: https://plugins.svn.wordpress.org/wp-evs/trunk@908177 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/evs.css
+++ b/assets/evs.css
@@ -1,6 +1,12 @@
 [data-role="evp-video"] video,
+[data-role="evp-video"] object,
+[data-role="evp-video"] embed,
+[data-role="evp-splittest"] video,
 [data-role="evp-splittest"] object,
-[data-role="evp-playlist"] embed { max-width: none !important; max-width: none; }
+[data-role="evp-splittest"] embed,
+[data-role="evp-playlist"] video,
+[data-role="evp-playlist"] object
+[data-role="evp-playlist"] embed { max-width: none !important; max-width: none; width: inherit; }
 
 [data-role="evp-video"] img,
 [data-role="evp-splittest"] img,
